--- a/Translation/UI.json
+++ b/Translation/UI.json
@@ -1903,7 +1903,7 @@
         "en":"Basic Stats",
         "fr":"Stat de Base",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"基础数据",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1922,7 +1922,7 @@
         "en":"Bonus Stats",
         "fr":"Stat Bonus",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"奖励数据",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1941,7 +1941,7 @@
         "en":"Cost: {0} Valor Refine Crystal",
         "fr":"Coût: {0} Crystal d'Affinage Valeureux",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"费用: {0} 勇气精炼水晶",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2720,7 +2720,7 @@
         "en":"Check Stats",
         "fr":"Consulter les stats",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"查看数据",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2891,7 +2891,7 @@
         "en":"Token",
         "fr":"Token",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"代币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3120,7 +3120,7 @@
         "en":"{0} Token",
         "fr":"{0} Token",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"{0} 代币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3215,7 +3215,7 @@
         "en":"Points",
         "fr":"Points",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"熟练度",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3633,7 +3633,7 @@
         "en":"Rank",
         "fr":"Rang",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"排名",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3690,7 +3690,7 @@
         "en":"Members",
         "fr":"Membres",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"成员",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3709,7 +3709,7 @@
         "en":"Stronghold",
         "fr":"Forteresse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"据点",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3728,7 +3728,7 @@
         "en":"Wars",
         "fr":"Guerres",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"战争",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3747,7 +3747,7 @@
         "en":"Actions",
         "fr":"Actions",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"操作",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -3994,7 +3994,7 @@
         "en":"Guild Statement",
         "fr":"Message de Guilde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"公会声明",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4051,7 +4051,7 @@
         "en":"You are about to kick the player <i>{0}</i> out of the guild. Continue ?",
         "fr":"Vous allez ejecter le joueur <i>{0}</i> hors de la guilde. Continuer ?",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"您将把玩家 <i>{0}</i> 踢出公会。继续？",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4184,7 +4184,7 @@
         "en":"Guild List",
         "fr":"Liste des Guildes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"公会列表",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4203,7 +4203,7 @@
         "en":"Guild War",
         "fr":"Guerre de Guildes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"公会战争",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4222,7 +4222,7 @@
         "en":"Stronghold Reg.",
         "fr":"Enreg. Bastion",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"据点管理",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4336,7 +4336,7 @@
         "en":"Potions",
         "fr":"Potions",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"贡献",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4355,7 +4355,7 @@
         "en":"Treasures",
         "fr":"Trésors",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"宝库",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4374,7 +4374,7 @@
         "en":"{0} Guild score",
         "fr":"{0} Score de guilde",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"{0} 公会积分",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4393,7 +4393,7 @@
         "en":"Requires guild shop level {0}",
         "fr":"Requiers un Magasin de Guilde niveau {0}",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"需要公会商店等级 {0}",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4412,7 +4412,7 @@
         "en":"Daily limit: {0}",
         "fr":"Limite quotidienne: {0}",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"每日限量: {0}",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -4431,7 +4431,7 @@
         "en":"No limit",
         "fr":"Pas de limite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"无限量",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5001,7 +5001,7 @@
         "en":"Refining your spirit's aptitude will consume a <i class='inline-item item-icon-41030'></i> Spirit Refining Stone that will give 5 points to a random aptitude. Continue?",
         "fr":"Raffiner les aptitudes de votre esprit consommera une <i class='inline-item item-icon-41030'></i> Gemme de rafinnage d'esprit qui donneras 5 points a une aptitude aléatoire. Continuer?",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"精炼精灵资质将消耗一块<i class='inline-item item-icon-41030'></i> 精灵精炼石，它将随机给一个资质+5点. 继续?",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5020,7 +5020,7 @@
         "en":"To combine a spirit, you need to have both your equipped spirit and the selected spirit to be at max soul level. You can only combine with a lower level spirit. Combining will take 20% BASE stat in the selected spirit to your equipped one. Combinations can't be cumulated. The combined spirit will be deleted after the merge is done.",
         "fr":"Pour combiner un esprit, il faut que l'esprit équipé et l'esprit sélectionné soient tous deux au niveau d'âme maximum. Vous ne pouvez combiner qu'avec un esprit de niveau inférieur. En combinant un esprit, vous ajoutez 20% des stats de base de l'esprit sélectionné à celle de l'esprit équipé. Les combinaisons ne peuvent pas être cumulées. L'ésprit combiné seras supprimé une fois la combinaison terminée.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"合成精灵，你需要主精灵和辅精灵都达到最大精魂等级。你只能与一个低级精灵合成。合成将使你的主精灵提升20%的基础属性。合成不能叠加。合成完成后，辅精灵将被删除。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5039,7 +5039,7 @@
         "en":"Current spirit combined stats",
         "fr":"Amélioration de combinaison actuelle",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"现精灵综合数据",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5058,7 +5058,7 @@
         "en":"New spirit combined stats",
         "fr":"Amélioration de combinaison résultante",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"新精灵综合数据",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -5514,7 +5514,7 @@
         "en":"Finish the kuroom daily quest 20 times",
         "fr":"Finir la quête journalière de kuroom 20 fois",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"完成克鲁姆每日任务20次",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6274,7 +6274,7 @@
         "en":"Abyss Paradox",
         "fr":"Paradoxe des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊挑战",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6293,7 +6293,7 @@
         "en":"Throw yourself into a rift opened by a mysterious force from the depths of the Fiery Tower and challenge creatures from worlds never before explored by the inhabitants of Cain",
         "fr":"Jetez-vous dans une faille ouverte par une force mystérieuse provenant des tréfond de la Tour de Feu et défiez des créatures provenant de mondes jamais explorés par les habitants de Kane",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"进入由火塔深处神秘力量打开的裂缝中，挑战来自凯恩居民未探索过的世界中生物。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6521,7 +6521,7 @@
         "en":"Abyss",
         "fr":"Abysse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊挑战",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6654,7 +6654,7 @@
         "en":"Floor",
         "fr":"Etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -6711,7 +6711,7 @@
         "en":"{0}: Requires {1} Bur's blessing for the next level",
         "fr":"{0}: Nécessite {1} Bénédiction de Bur pour le niveau suivant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"{0}: 下一级需要 {1} 瓦恩祝福",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8706,7 +8706,7 @@
         "en":"Social",
         "fr":"Social",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"社交",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8725,7 +8725,7 @@
         "en":"Friend",
         "fr":"Amis",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"好友",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8744,7 +8744,7 @@
         "en":"Foe",
         "fr":"Ennemi",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"敌人",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8763,7 +8763,7 @@
         "en":"Blocked",
         "fr":"Bloqué",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"黑名单",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8782,7 +8782,7 @@
         "en":"Operation",
         "fr":"Opération",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"状态",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8801,7 +8801,7 @@
         "en":"PM",
         "fr":"MP",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"PM",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8820,7 +8820,7 @@
         "en":"Abyss",
         "fr":"Abysse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊挑战",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8839,7 +8839,7 @@
         "en":"You can choose an already completed abyss floor before you enter.<br>Highest floor you can reach: {0}",
         "fr":"Vous pouvez choisir un étage déjà terminé avant d'entrer.<br>Plus haut étage que vous pouvez atteindre: {0}",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"你可以选择从已经打通的层数进入.<br>你最高打到: {0}层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8858,7 +8858,7 @@
         "en":"Nightmarish",
         "fr":"Cauchemardesque",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"噩梦深渊",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8877,7 +8877,7 @@
         "en":"Horrific",
         "fr":"Horrifiant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"恐惧深渊",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8896,7 +8896,7 @@
         "en":"Desperation",
         "fr":"Désespoir",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"绝望深渊",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8915,7 +8915,7 @@
         "en":"Fatality",
         "fr":"Fatalité",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"死亡记录",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8934,7 +8934,7 @@
         "en":"Choose Floor",
         "fr":"Choisir l'Etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"选择层数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8953,7 +8953,7 @@
         "en":"Floor",
         "fr":"Etage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8972,7 +8972,7 @@
         "en":"State",
         "fr":"Etat",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"状态",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -8991,7 +8991,7 @@
         "en":"Aquired",
         "fr":"Obtenus",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"已获得",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9010,7 +9010,7 @@
         "en":"Undone",
         "fr":"Manquant",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"未获得",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9029,7 +9029,7 @@
         "en":"Abyss Floor {0}",
         "fr":"Abysse Étage {0}",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊层数 {0}",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9048,7 +9048,7 @@
         "en":"Abyss Seer",
         "fr":"Voyant des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"临渊者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9067,7 +9067,7 @@
         "en":"Abyss Challenger",
         "fr":"Challenger des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊挑战者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9086,7 +9086,7 @@
         "en":"Abyss Trainee",
         "fr":"Apprenti des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊试炼者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9105,7 +9105,7 @@
         "en":"Abyss Adventurer",
         "fr":"Aventurier des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊勇者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9124,7 +9124,7 @@
         "en":"Abyss Mystic",
         "fr":"Mystique des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊聚魔者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9143,7 +9143,7 @@
         "en":"Abyss Smasher",
         "fr":"Briseur des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊碎裂者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9162,7 +9162,7 @@
         "en":"Abyss Master",
         "fr":"Maître des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊驾驭者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9181,7 +9181,7 @@
         "en":"Abyss Keeper",
         "fr":"Gardien des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊掌控者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9200,7 +9200,7 @@
         "en":"Abyss Star",
         "fr":"Etoile des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊之星",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9219,7 +9219,7 @@
         "en":"Abyss Dawn",
         "fr":"Aurore des Abysses",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"深渊曙光",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9238,7 +9238,7 @@
         "en":"Nightmare Messenger",
         "fr":"Messager du Cauchemar",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"噩梦使者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9257,7 +9257,7 @@
         "en":"Nightmare Agent",
         "fr":"Agent du Cauchemar",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"梦餍侍者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9276,7 +9276,7 @@
         "en":"Nightmare Dread",
         "fr":"Terreur du Cauchemar",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"噩梦惊魂者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9295,7 +9295,7 @@
         "en":"Nightmare Spirit",
         "fr":"Esprit Cauchemardesque",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"梦餍惊魂者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9314,7 +9314,7 @@
         "en":"Dream Illusionist",
         "fr":"Illusionniste des Rêves",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"幻梦者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9333,7 +9333,7 @@
         "en":"Dream Manipulator",
         "fr":"Manipulateur des Rêves",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"梦境控制者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9352,7 +9352,7 @@
         "en":"Dream Weaver",
         "fr":"Tisseur de Rêves",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"造梦者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9371,7 +9371,7 @@
         "en":"Dream Lord",
         "fr":"Seigneur des Rêves",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"噩梦之主",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9390,7 +9390,7 @@
         "en":"Punisher",
         "fr":"Bourreau",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"异端制裁者",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9409,7 +9409,7 @@
         "en":"Hands of Protection",
         "fr":"Mains Protectrices",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"千之护手",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9428,7 +9428,7 @@
         "en":"Logs",
         "fr":"Logs",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"日志",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -9447,7 +9447,7 @@
         "en":"Create a character",
         "fr":"Créer un personnage",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"创建角色",
         "zh-tw":"",
         "kr":"",
         "ru":"",
