--- a/Translation/config.json
+++ b/Translation/config.json
@@ -41,7 +41,7 @@
         "en":"User Interface",
         "fr":"Interface Utilisateur",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"用户界面",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -60,7 +60,7 @@
         "en":"Hide all mounts",
         "fr":"Cacher toutes les montures",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"隐藏所有坐骑",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -79,7 +79,7 @@
         "en":"Hide all wings",
         "fr":"Cacher toutes les ailes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"隐藏所有翅膀",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -98,7 +98,7 @@
         "en":"Render damages",
         "fr":"Afficher les dégâts",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"伤害显示",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -117,7 +117,7 @@
         "en":"Render critical damages",
         "fr":"Afficher les dégâts critiques",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"暴击伤害显示",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -136,7 +136,7 @@
         "en":"Render element damages",
         "fr":"Afficher les dégâts élémentaires",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"元素伤害显示",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -155,7 +155,7 @@
         "en":"Render critical element damages",
         "fr":"Afficher les dégâts critiques élémentaires",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"暴击元素伤害显示",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -174,7 +174,7 @@
         "en":"Only render your damages",
         "fr":"Afficher seulement ses propre dégâts",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"仅显自身伤害",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -193,7 +193,7 @@
         "en":"Render skill's animations",
         "fr":"Afficher les animations des compétences",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"技能特效显示",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -250,7 +250,7 @@
         "en":"Logs max saved lines",
         "fr":"Nb max de lignes de logs",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"日志最大保存行数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -269,7 +269,7 @@
         "en":"Chat max saved lines",
         "fr":"Nb max de lignes de chat",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"聊天最大保存行数",
         "zh-tw":"",
         "kr":"",
         "ru":"",
