--- a/Translation/event.json
+++ b/Translation/event.json
@@ -60,7 +60,7 @@
         "en":"Register",
         "fr":"S'inscrire",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"注册",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -79,7 +79,7 @@
         "en":"Unregister",
         "fr":"Se désinscrire",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"取消注册",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -155,7 +155,7 @@
         "en":"Time: 10:00-11:00 18:00-19:00 (Server Time)",
         "fr":"Horaires: 10:00-11:00 18:00-19:00 (Heure du Serveur)",
         "es":"Horarios: 11:00-12:00 19:00-20:00 (GMT+1)",
-        "zh-cn":"18:00-19:00 02:00-03:00 (GMT+8)",
+        "zh-cn":"时间: 18:00-19:00 02:00-03:00 (GMT+8)",
         "zh-tw":"",
         "kr":"19:00-20:00 03:00-04:00 (GMT+9)",
         "ru":"13:00-14:00 21:00-22:00 (GMT+3)",
@@ -174,7 +174,7 @@
         "en":"Battlefield",
         "fr":"Champ de bataille",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"战场",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -193,7 +193,7 @@
         "en":"EXP, Token",
         "fr":"EXP, Coupon",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"经验, 代币",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -212,7 +212,7 @@
         "en":"Time (Server): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
         "fr":"Horaires(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
         "es":"Horarios(Serveur): 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
-        "zh-cn":"(Serveur) 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
+        "zh-cn":"时间(服务器) : 00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00",
         "zh-tw":"",
         "kr":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
         "ru":"00:30-01:00 04:30-05:00<br>08:30-09:00 12:30-13:00<br>16:30-17:00 20:30-21:00 (Serveur)",
@@ -231,7 +231,7 @@
         "en":"Ally",
         "fr":"Allié",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"盟友",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -250,7 +250,7 @@
         "en":"Enemy",
         "fr":"Ennemi",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"敌人",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -269,7 +269,7 @@
         "en":"Team",
         "fr":"Equipe",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"团队",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -288,7 +288,7 @@
         "en":"Flag",
         "fr":"Drapeau",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"旗帜",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -307,7 +307,7 @@
         "en":"Score",
         "fr":"Score",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"得分",
         "zh-tw":"",
         "kr":"",
         "ru":"",
