--- a/Translation/instance.json
+++ b/Translation/instance.json
@@ -288,7 +288,7 @@
         "en": "Mysterious Crypt",
         "fr": "Crypte Mystérieuse",
         "es": "Cripta Misteriosa",
-        "zh-cn": "",
+        "zh-cn": "神秘墓穴",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -345,7 +345,7 @@
         "en": "Fallen Airship",
         "fr": "Dirigeable Tombé",
         "es": "Dirigible Caído",
-        "zh-cn": "",
+        "zh-cn": "陨落飞艇",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -402,7 +402,7 @@
         "en": "Ravaxi",
         "fr": "Ravaxi",
         "es": "Ravaxí",
-        "zh-cn": "",
+        "zh-cn": "拉瓦西",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -421,7 +421,7 @@
         "en": "Thorny Heights",
         "fr": "Hauteurs Épineuses",
         "es": "Alturas Espinosas",
-        "zh-cn": "",
+        "zh-cn": "荆棘高地",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -440,7 +440,7 @@
         "en": "Deep Blue City",
         "fr": "Ville Bleu Profond",
         "es": "Ciudad Azul Profundo",
-        "zh-cn": "",
+        "zh-cn": "深蓝之城",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -459,7 +459,7 @@
         "en": "Letin Harbor",
         "fr": "Port de Letin",
         "es": "Puerto de Letin",
-        "zh-cn": "",
+        "zh-cn": "莱丁港",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -478,7 +478,7 @@
         "en": "Nordic Lands",
         "fr": "Terres Nordiques",
         "es": "Tierras Nórdicas",
-        "zh-cn": "",
+        "zh-cn": "北欧地区",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -497,7 +497,7 @@
         "en": "...",
         "fr": "...",
         "es": "...",
-        "zh-cn": "",
+        "zh-cn": "...",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -516,7 +516,7 @@
         "en": "Rat Crisis",
         "fr": "Crise des Rats",
         "es": "Crisis de Ratas",
-        "zh-cn": "",
+        "zh-cn": "老鼠危机",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -535,7 +535,7 @@
         "en": "Opera House Conspiracy",
         "fr": "Complot de l'Opéra",
         "es": "Conspiración de la Ópera",
-        "zh-cn": "",
+        "zh-cn": "歌剧院阴谋",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -554,7 +554,7 @@
         "en": "Slime Opera House",
         "fr": "L'opéra Slime",
         "es": "Ópera de Limo",
-        "zh-cn": "",
+        "zh-cn": "史莱姆歌剧院",
         "zh-tw":"",
         "kr": "",
         "ru": "",
@@ -573,7 +573,7 @@
         "en": "Opera House Bandits",
         "fr": "Bandits de l'Opéra",
         "es": "Bandidos de la Ópera",
-        "zh-cn": "",
+        "zh-cn": "歌剧院强盗",
         "zh-tw":"",
         "kr": "",
         "ru": "",
