--- a/Translation/map.json
+++ b/Translation/map.json
@@ -1637,7 +1637,7 @@
         "en":"Siren City",
         "fr":"Cité des sirènes",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"海妖之城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1656,7 +1656,7 @@
         "en":"Starfish Castle",
         "fr":"Château de l'étoile de mer",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"海星之城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1675,7 +1675,7 @@
         "en":"Crystal Ocean",
         "fr":"Océan Cristallin",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"水晶之海",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1694,7 +1694,7 @@
         "en":"Sea of Sharks",
         "fr":"Mer de Requins",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"鲨鱼海城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1713,7 +1713,7 @@
         "en":"Starry Town",
         "fr":"Ville étoilée",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1732,7 +1732,7 @@
         "en":"Starry Town Floor 1",
         "fr":"Ville étoilée Etage 1",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城1层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1751,7 +1751,7 @@
         "en":"Starry Town Floor 2",
         "fr":"Ville étoilée Etage 2",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城2层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1770,7 +1770,7 @@
         "en":"Starry Town Floor 3",
         "fr":"Ville étoilée Etage 3",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城3层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1789,7 +1789,7 @@
         "en":"Starry Town Floor 4",
         "fr":"Ville étoilée Etage 4",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城4层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1808,7 +1808,7 @@
         "en":"Starry Town Floor 5",
         "fr":"Ville étoilée Etage 5",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城5层",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1827,7 +1827,7 @@
         "en":"Starry Town Hall of Elite",
         "fr":"Ville étoilée Hall d'Élite",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城精英大厅",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1846,7 +1846,7 @@
         "en":"Starry Town Hall of Elite Deep",
         "fr":"Ville étoilée Hall d'Élite Profond",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"星海之城精英大厅深处",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1865,7 +1865,7 @@
         "en":"Bewildering Sea",
         "fr":"Mer Déconcertante",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"怪鱼海城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1884,7 +1884,7 @@
         "en":"Mystical Sea",
         "fr":"Mer Mystique",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"神秘海城",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1903,7 +1903,7 @@
         "en":"Town Of Billows",
         "fr":"Village des flots",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"波涛村",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1922,7 +1922,7 @@
         "en":"Gate of Sins",
         "fr":"Porte des Péchés",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"罪恶之门",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -1941,7 +1941,7 @@
         "en":"Vicious Court",
         "fr":"Cour Vicieuse",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"邪恶法庭",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2169,7 +2169,7 @@
         "en":"Lava Labyrinth",
         "fr":"Labyrinthe de Lave",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"熔岩迷宫",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2188,7 +2188,7 @@
         "en":"Lava Hall",
         "fr":"Hall de Lave",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"熔岩大厅",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -2207,7 +2207,7 @@
         "en":"Lv45 Dungeon Boss Room",
         "fr":"Salle du Boss de Donjon Nv45",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"45级地牢BOSS房",
         "zh-tw":"",
         "kr":"",
         "ru":"",
