--- a/Translation/tooltip.json
+++ b/Translation/tooltip.json
@@ -497,7 +497,7 @@
         "en":"Add friend",
         "fr":"Ajouter amis",
         "es":"Anadir amigos",
-        "zh-cn":"",
+        "zh-cn":"添加好友",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -516,7 +516,7 @@
         "en":"Remove friend",
         "fr":"Retirer amis",
         "es":"Remover amigos",
-        "zh-cn":"",
+        "zh-cn":"删除好友",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -535,7 +535,7 @@
         "en":"Add foe",
         "fr":"Ajouter ennemis",
         "es":"Anadir Enemigo",
-        "zh-cn":"",
+        "zh-cn":"添加敌人",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -554,7 +554,7 @@
         "en":"Remove foe",
         "fr":"Retirer ennemis",
         "es":"Remover enemigo",
-        "zh-cn":"",
+        "zh-cn":"删除敌人",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -573,7 +573,7 @@
         "en":"Block",
         "fr":"Bloquer",
         "es":"Bloquear",
-        "zh-cn":"",
+        "zh-cn":"锁定",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -592,7 +592,7 @@
         "en":"Unblock",
         "fr":"Débloquer",
         "es":"Desbloquear",
-        "zh-cn":"",
+        "zh-cn":"解锁",
         "zh-tw":"",
         "kr":"",
         "ru":"",
