--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -1162,7 +1162,7 @@
         "en":"Multiple arrows fall from the sky and deal damage over time in the targeted area for 3 seconds. When the players reach level 60, on the last hit, apply a poison for 5 seconds.",
         "fr":"Plusieurs flèches tombent du ciel et infligent des dégâts sur la durée dans la zone ciblée pendant 3 secondes. Quand le joueur atteind le niveau 60, sur le dernier coup, un poison est appliqué pendant 5 secondes.",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"多支箭矢从天而降，在目标区域造成持续3秒的伤害。当玩家达到60级时，在最后一击中施毒5秒。",
         "zh-tw":"",
         "kr":"",
         "ru":"",
