--- a/Translation/item.json
+++ b/Translation/item.json
@@ -14797,7 +14797,7 @@
 		"en":"Lvl 5 Vitality Gem",
 		"fr":"Nv 5 Gemme de Vitalité",
 		"es":"",
-		"zh-cn":5级生命宝石",
+		"zh-cn":"5级生命宝石",
 		"zh-tw":"",
 		"kr":"",
 		"ru":"",
