--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -57,8 +57,8 @@
         "id":""
     },
     "skills.mage_base.effect":{
-        "en":"",
-        "fr":"",
+        "en":"Launch a small fireball to your target",
+        "fr":"Lance une petite boule de feu a votre cible",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -76,8 +76,8 @@
         "id":""
     },
     "skills.ranger_base.effect":{
-        "en":"",
-        "fr":"",
+        "en":"Shoot an arrow at your target",
+        "fr":"Décoche une fleche sur votre cible",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -95,8 +95,8 @@
         "id":""
     },
     "skills.warrior_base.effect":{
-        "en":"",
-        "fr":"",
+        "en":"Swing your sword at your target",
+        "fr":"Portez un coup d'épée vers votre cible",
         "es":"",
         "zh-cn":"",
         "zh-tw":"",
@@ -112,6 +112,63 @@
         "pl":"",
         "th":"",
         "id":""
+    },
+    "skills.mage.mage_base.description":{
+        "en":"&nbsp;",
+        "fr":"&nbsp;",
+        "es":"&nbsp;",
+        "zh-cn":"&nbsp;",
+        "zh-tw":"&nbsp;",
+        "kr":"&nbsp;",
+        "ru":"&nbsp;",
+        "tr":"&nbsp;",
+        "de":"&nbsp;",
+        "jp":"&nbsp;",
+        "pt":"&nbsp;",
+        "vi":"&nbsp;",
+        "ar":"&nbsp;",
+        "it":"&nbsp;",
+        "pl":"&nbsp;",
+        "th":"&nbsp;",
+        "id":"&nbsp;"
+    },
+    "skills.ranger.ranger_base.description":{
+        "en":"&nbsp;",
+        "fr":"&nbsp;",
+        "es":"&nbsp;",
+        "zh-cn":"&nbsp;",
+        "zh-tw":"&nbsp;",
+        "kr":"&nbsp;",
+        "ru":"&nbsp;",
+        "tr":"&nbsp;",
+        "de":"&nbsp;",
+        "jp":"&nbsp;",
+        "pt":"&nbsp;",
+        "vi":"&nbsp;",
+        "ar":"&nbsp;",
+        "it":"&nbsp;",
+        "pl":"&nbsp;",
+        "th":"&nbsp;",
+        "id":"&nbsp;"
+    },
+    "skills.warrior.warrior_base.description":{
+        "en":"&nbsp;",
+        "fr":"&nbsp;",
+        "es":"&nbsp;",
+        "zh-cn":"&nbsp;",
+        "zh-tw":"&nbsp;",
+        "kr":"&nbsp;",
+        "ru":"&nbsp;",
+        "tr":"&nbsp;",
+        "de":"&nbsp;",
+        "jp":"&nbsp;",
+        "pt":"&nbsp;",
+        "vi":"&nbsp;",
+        "ar":"&nbsp;",
+        "it":"&nbsp;",
+        "pl":"&nbsp;",
+        "th":"&nbsp;",
+        "id":"&nbsp;"
     },
     "skills.mage.FIRE_BOLT.name":{
         "en":"Fire Bolt",
