--- a/Translation/item.json
+++ b/Translation/item.json
@@ -7186,6 +7186,25 @@
         "th":"",
         "id":""
     },
+    "item.3806.name":{
+        "en":"[Spirit Egg] Flame Lord Leo",
+        "fr":"[Oeuf d'esprit] Seigneur des Flames Leo",
+        "es":"",
+        "zh-cn":"[精灵蛋] 火焰领主利奥",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"[Linh Trứng] Hỏa Vương Leo",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
     "item.4000.name":{
         "en":"Pudding Slime",
         "fr":"Slime Pudding",
@@ -9650,6 +9669,26 @@
         "jp":"",
         "pt":"",
         "vi":"Xúc Tu Của Bahamut",
+        "ar":"",
+        "it":"",
+        "pl":"",
+        "th":"",
+        "id":""
+    },
+    
+    "item.4806.name":{
+        "en":"Flame Lord Leo",
+        "fr":"Seigneur des Flames Leo",
+        "es":"",
+        "zh-cn":"火焰领主利奥",
+        "zh-tw":"",
+        "kr":"",
+        "ru":"",
+        "tr":"",
+        "de":"",
+        "jp":"",
+        "pt":"",
+        "vi":"Hỏa Vương Leo",
         "ar":"",
         "it":"",
         "pl":"",
