--- a/Translation/skills.json
+++ b/Translation/skills.json
@@ -60,7 +60,7 @@
         "en":"Launch a small fireball to your target",
         "fr":"Lance une petite boule de feu a votre cible",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"向目标发射一颗小火球",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -79,7 +79,7 @@
         "en":"Shoot an arrow at your target",
         "fr":"Décoche une fleche sur votre cible",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"朝目标射箭",
         "zh-tw":"",
         "kr":"",
         "ru":"",
@@ -98,7 +98,7 @@
         "en":"Swing your sword at your target",
         "fr":"Portez un coup d'épée vers votre cible",
         "es":"",
-        "zh-cn":"",
+        "zh-cn":"挥剑刺向目标",
         "zh-tw":"",
         "kr":"",
         "ru":"",
